org_unpackaged/unpackaged/objects/Lead_Outcomes_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Converted__c</fullName>
        <label>Converted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Manager__c</fullName>
        <label>Enrollment Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Deferred__c</fullName>
        <label>Status = Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Lost__c</fullName>
        <label>Status = Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_New__c</fullName>
        <label>Status = New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Sold__c</fullName>
        <label>Status = Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Working__c</fullName>
        <label>Status = Working</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Outcomes Snapshot</label>
    <nameField>
        <displayFormat>Lead Outcome-{00000}</displayFormat>
        <label>Lead Outcomes Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Outcomes Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>